tests/NormalTests/paczka1/fuzzy1/90086540.err
Error in line 1: Jv7Nmj0RLR A943 87,3
Error in line 13: 8MkCaoAvb8W A351 783,6
Error in line 12: KNCA A351 71,8
Error in line 18: Jv7Nmj0RLR A78 93,1
Error in line 27: Jv7Nmj0RLR A943 21,6
Error in line 28: Jv7Nmj0RLR A78 89,9
Error in line 30: Jv7Nmj0RLR A969 62,4
